--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="wrapper">
         <div class="container">
             <div class="inner">
-                <a class="test" href="/Тестовое задание 1/">Тестовое задание 1</a>
-                <a class="test" href="/Тестовое задание 2/">Тестовое задание 2</a>
+                <a class="test" href="/Тестовое задание 1/">test-first</a>
+                <a class="test" href="/Тестовое задание 2/">test-second</a>
             </div>
         </div>
     </div>
